--- a/pricing.html
+++ b/pricing.html
@@ -679,7 +679,12 @@
         const userPhoto = document.getElementById('user-photo');
         const userDisplayName = document.getElementById('user-display-name');
 
-        const premiumUsers = ["yusupovumarcr7@gmail.com", "premium@gmail.com", "shoxish@mail.ru", "nozimshavkiev@gmail.com", "muhammadjonsh1243@gmail.com", "thezloy112@gmail.com", "shoilyosovshosamad@gmail.com", "saidumarjaxongirov@gmail.com", "javoxirabduvasiyev@gmail.com", "shoxjaxon303001@gmail.com", "shomurodovnodirbek94@gmail.com"];
+        const premiumUsers = ["yusupovumarcr7@gmail.com", "premium@gmail.com", "shoxish@mail.ru", "nozimshavkiev@gmail.com", "muhammadjonsh1243@gmail.com", "thezloy112@gmail.com", "shoilyosovshosamad@gmail.com", "saidumarjaxongirov@gmail.com", "javoxirabduvasiyev@gmail.com", "shoxjaxon303001@gmail.com", "shomurodovnodirbek94@gmail.com", ,
+            "asprogamermega757@gmail.com",
+            "maxmudovn0810@gmail.com",
+            "abdurasulovmuhammadyusuf77@gmail.com",
+            "killerhuman1901@gmail.com",
+        ];
 
         auth.onAuthStateChanged(user => {
             const existingBadge = document.getElementById('premium-badge');
