--- a/speaking_topics.html
+++ b/speaking_topics.html
@@ -594,7 +594,11 @@
             "saidumarjaxongirov@gmail.com",
             "javoxirabduvasiyev@gmail.com",
             "shoxjaxon303001@gmail.com",
-            "shomurodovnodirbek94@gmail.com"
+            "shomurodovnodirbek94@gmail.com",
+            "asprogamermega757@gmail.com",
+            "maxmudovn0810@gmail.com",
+            "abdurasulovmuhammadyusuf77@gmail.com",
+            "killerhuman1901@gmail.com",
         ];
 
         auth.onAuthStateChanged(user => {
